@@ -871,4 +871,10 @@ correctly, but that messes up comparisons). --/
 
 /[^\x{1234}]{2}/iS8I
 
+/^S(\X*)e(\X*)$/8
+    Stéréo
+    
+/^\X/8 
+    ́réo
+
 /-- End of testinput5 --/
